--- a/decoupling-from-the-state-layer/css/theme/source/iagodahlem.scss
+++ b/decoupling-from-the-state-layer/css/theme/source/iagodahlem.scss
@@ -56,3 +56,11 @@ html {
 body {
   font-size: 16px;
 }
+
+.flex {
+  display: flex;
+}
+
+.justify-space-beween {
+  justify-content: space-between;
+}
